[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Command-line search engine for exploring information retrieval techniques"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk==3.9.1",
    "numpy==2.3.3",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.6.0",
]
