[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Command-line search engine for exploring information retrieval techniques"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk==3.9.1",
    "numpy==2.3.3",
    "openai==2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.6.0",
]

[tool.ruff]
line-length = 100
